# knoobar

./: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
docs/: ffmpeg-windows.md
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  library.rs  main.rs  playback.rs
src-tauri/src/audio/: ffmpeg_cli.rs  mod.rs  probe.rs
src/api/: bindings.ts
src/assets/: main.css
src/components/: LibraryRoots.vue  PlayerBar.vue  TagEditor.vue  TrackTable.vue
src/stores/: library.ts  player.ts
