[package]
name = "knoobar"
version = "0.1.0"
description = "knoobar — Symphonia + SQLite library"
authors = ["you"]
edition = "2021"

[lib]
name = "knoobar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
lofty = "0.22"
symphonia = { version = "0.5.5", features = ["all"] }
cpal = "0.15.3"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
parking_lot = "0.12"
dirs = "5"
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
